--- a/miriv/quartus/miriv.qsf
+++ b/miriv/quartus/miriv.qsf
@@ -58,34 +58,6 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
 set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
-set_global_assignment -name VHDL_FILE ../vhdl/alu.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/wb.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/mem_pkg.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/core_pkg.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/regfile.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/op_pkg.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/memu.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/mem.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/fwd.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/fetch.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/exec.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/decode.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/ctrl.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/pipeline.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/cache/cache_pkg.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/cache/ram/single_clock_rw_ram_pkg.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/cache/ram/single_clock_rw_ram.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/cache/repl.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/cache/data_st_1w.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/cache/data_st.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/cache/mgmt_st_1w.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/cache/mgmt_st.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/cache/cache.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/core.vhd
-set_global_assignment -name VHDL_FILE pll_altera.vhd
-set_global_assignment -name VHDL_FILE top.vhd
-set_global_assignment -name SDC_FILE miriv.sdc
-set_global_assignment -name QXP_FILE bootloader.qxp
 set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
 
 
@@ -106,4 +78,32 @@ set_instance_assignment -name IO_STANDARD "2.5 V" -to rx
 
 
 
+set_global_assignment -name VHDL_FILE ../vhdl/alu.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/wb.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/mem_pkg.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/core_pkg.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/regfile.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/op_pkg.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/memu.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/mem.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/fwd.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/fetch.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/exec.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/decode.vhd -hdl_version VHDL_2008
+set_global_assignment -name VHDL_FILE ../vhdl/ctrl.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/pipeline.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/cache/cache_pkg.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/cache/ram/single_clock_rw_ram_pkg.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/cache/ram/single_clock_rw_ram.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/cache/repl.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/cache/data_st_1w.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/cache/data_st.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/cache/mgmt_st_1w.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/cache/mgmt_st.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/cache/cache.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/core.vhd
+set_global_assignment -name VHDL_FILE pll_altera.vhd
+set_global_assignment -name VHDL_FILE top.vhd
+set_global_assignment -name SDC_FILE miriv.sdc
+set_global_assignment -name QXP_FILE bootloader.qxp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
