--- a/miriv/quartus/miriv.qsf
+++ b/miriv/quartus/miriv.qsf
@@ -58,26 +58,6 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
 set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
-set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
-
-
-# PINOUT
-set_location_assignment PIN_Y2 -to clk
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk
-set_location_assignment PIN_R24 -to res_n
-set_instance_assignment -name IO_STANDARD "2.5 V" -to res_n
-set_location_assignment PIN_G9 -to tx
-set_instance_assignment -name IO_STANDARD "2.5 V" -to tx
-set_location_assignment PIN_G12 -to rx
-set_instance_assignment -name IO_STANDARD "2.5 V" -to rx
-
-
-
-
-
-
-
-
 set_global_assignment -name VHDL_FILE ../vhdl/alu.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/wb.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/mem_pkg.vhd
@@ -89,7 +69,7 @@ set_global_assignment -name VHDL_FILE ../vhdl/mem.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/fwd.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/fetch.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/exec.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/decode.vhd -hdl_version VHDL_2008
+set_global_assignment -name VHDL_FILE ../vhdl/decode.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/ctrl.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/pipeline.vhd
 set_global_assignment -name VHDL_FILE ../vhdl/cache/cache_pkg.vhd
@@ -106,4 +86,30 @@ set_global_assignment -name VHDL_FILE pll_altera.vhd
 set_global_assignment -name VHDL_FILE top.vhd
 set_global_assignment -name SDC_FILE miriv.sdc
 set_global_assignment -name QXP_FILE bootloader.qxp
+set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
+
+
+# PINOUT
+set_location_assignment PIN_Y2 -to clk
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk
+set_location_assignment PIN_R24 -to res_n
+set_instance_assignment -name IO_STANDARD "2.5 V" -to res_n
+set_location_assignment PIN_G9 -to tx
+set_instance_assignment -name IO_STANDARD "2.5 V" -to tx
+set_location_assignment PIN_G12 -to rx
+set_instance_assignment -name IO_STANDARD "2.5 V" -to rx
+
+
+set_global_assignment -name PARTITION_NETLIST_TYPE POST_FIT -section_id "dev:dev_inst"
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id "dev:dev_inst"
+set_global_assignment -name PARTITION_COLOR 39423 -section_id "dev:dev_inst"
+set_global_assignment -name PARTITION_IMPORT_FILE bootloader.qxp -section_id "dev:dev_inst"
+set_global_assignment -name PARTITION_LAST_IMPORTED_FILE bootloader.qxp -section_id "dev:dev_inst"
+
+set_global_assignment -name PARTITION_IMPORT_EXISTING_ASSIGNMENTS SKIP_CONFLICTING -section_id "dev:dev_inst"
+
+
+
+
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY devin_27e71 -to "dev:dev_inst" -section_id "dev:dev_inst"
