--- a/miriv/quartus/miriv.qsf
+++ b/miriv/quartus/miriv.qsf
@@ -106,4 +106,5 @@ set_instance_assignment -name IO_STANDARD "2.5 V" -to rx
 
 
 
+set_global_assignment -name OPTIMIZATION_MODE "AGGRESSIVE PERFORMANCE"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
